Add state transition activities

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :status %>
-    <%= form.text_field :status %>
+    <strong>Status:</strong>
+    <%= order.status %>
   </div>
 
   <div class="actions">
