--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :order_id %>
-    <%= form.text_field :order_id %>
+    <strong>Order ID:</strong>
+    <%= payment.order_id %>
   </div>
 
   <div class="actions">
