--- a/app/views/payments/edit.html.erb
+++ b/app/views/payments/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form', payment: @payment %>
 
-<%= link_to 'Show', @payment %> |
-<%= link_to 'Back', payments_path %>
+<%= link_to 'Back', @payment.order %>
